# ai-contract

./: .env.example  .gitignore  FILES.md  README.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  start.sh
.claude/: settings.local.json
analysis/: 20260626-李颖莹-面聊_说话人分离.txt  20260626-李颖莹-面聊_需求摘要.md  20260626-沈泰-电话_说话人分离.md  20260626-沈泰-电话_需求摘要.md  20260626-王亚楠_面聊_raw.json  20260626-王亚楠_面聊_说话人分离.txt  20260626-王亚楠_面聊_需求摘要.md  README.md
app/: README.md
app/api/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
app/api/app/: config.py  database.py  deps.py  main.py  security.py
app/api/app/models/: __init__.py  audit.py  changelog.py  clause.py  config.py  contract.py  diff.py  legal.py  review.py  rule.py  user.py
app/api/app/prompts/: review_clause.py
app/api/app/routers/: admin.py  auth.py  clauses.py  contracts.py  legal.py  reviews.py  rules.py  versions.py
app/api/app/schemas/: admin.py  auth.py  clause.py  contract.py  diff.py  legal.py  review.py  rule.py
app/api/app/seeds/: run_all.py  seed_admin.py  seed_focus.py  seed_legal.py  seed_rules.py  seed_template.py  seed_types.py
app/api/app/services/: audit_service.py  diff_engine.py  doc_parser.py  export_service.py  field_extractor.py  legal_service.py  model_gateway.py  ocr_service.py  parser_registry.py  pdf_parser.py  review_engine.py  rule_service.py  similarity_checker.py  type_detector.py
app/api/app/templates/: 采购合同模板.docx
app/api/tests/: test_api.sh
deploy/: deploy-e540.sh  nginx-222-mingheng.conf
docs/: README.md
prototype/: 明衡-合同审阅工作台.html
(+59 files in other folders)
